--- a/java/名词解释及配置关键字.md
+++ b/java/名词解释及配置关键字.md
@@ -1,11 +1,12 @@
 1. @EnableAutoConfiguration
-> 作用：从classpath中搜寻所有的META-INF/spring.factories配置文件，并将其中org.springframework.boot.autoconfigure.EnableutoConfiguration对应的
+>   从classpath中搜寻所有的META-INF/spring.factories配置文件，并将其中org.springframework.boot.autoconfigure.EnableutoConfiguration对应的
 配置项通过反射（Java Refletion）实例化为对应的标注了@Configuration的JavaConfig形式的IoC容器配置类，然后汇总为一个并加载到IoC容器。简单概括一下就是，
 借助@Import的支持，收集和注册特定场景相关的bean定义。
-2. bean
-> 是什么：一种规范，表达实体和信息的规范，便于封装重用，大家针对这种规范，总结了很多开发技巧、工具函数。符合这种规范的类，可以被其它的程序员或者框架使用。
-> 具体规范：
->>*所有属性为private
->>*提供默认构造方法
->>*提供getter和setter
->>*实现serializable接口
+2. bean  
+    是什么：  
+>     一种规范，表达实体和信息的规范，便于封装重用，大家针对这种规范，总结了很多开发技巧、工具函数。符合这种规范的类，可以被其它的程序员或者框架使用。  
+  具体规范：
+>* 所有属性为private
+>* 提供默认构造方法
+>* 提供getter和setter
+>* 实现serializable接口
