--- a/java/名词解释及配置关键字.md
+++ b/java/名词解释及配置关键字.md
@@ -7,3 +7,20 @@
 >* 提供默认构造方法
 >* 提供getter和setter
 >* 实现serializable接口
+### 3. @RestController   
+>&emsp;&emsp;@RestController的意思就是controller里面的方法都以json格式输出，不用再写什么jackjson配置
+### 4. @RequestMapping   
+>&emsp;&emsp;配置url映射  
+### 5. @SpringbootApplication  
+>&emsp;&emsp;这个注解就是 @Configuration 注解的变体，只是用来修饰是 Spring Boot 配置而已，或者可利于 Spring Boot 后续的扩展  
+### 6.@MapperScan  
+>&emsp;&emsp;通过使用@MapperScan可以指定basePackages，扫描mybatis Mapper接口类
+### 7.@AutoWired  
+>&emsp;&emsp;@Autowired 注释，它可以对类成员变量、方法及构造函数进行标注，完成自动装配的工作。  
+### 8. implements  
+>&emsp;&emsp;implements是一个类，实现一个接口用的关键字，它是用来实现接口中定义的抽象方法。实现一个接口，必须实现接口中的所有方法  
+>&emsp;&emsp;接口可以被多重实现（implements）,抽象类只能被单一继承（extends）
+>&emsp;&emsp;接口只有定义,抽象类可以有定义和实现
+>&emsp;&emsp;接口的字段定义默认为:public static final, 抽象类字段默认是"friendly"(本包可见)   
+### 9.@ResponseBody  
+>&emsp;&emsp;@ResponseBody是作用在方法上的，作用是将controller的方法返回的对象通过适当的转换器转换为指定的格式之后，写入到response对象的body区，通常用来返回JSON数据或者是XML
