--- a/mysql/问题及解决.md
+++ b/mysql/问题及解决.md
@@ -3,3 +3,5 @@
 #### 2. 报错“The server time zone value 'ÖÐ¹ú±ê×¼Ê±¼ä' is unrecognized or represents more than one time zone.”  
 >使用mysql -u root -p;输入密码登录mysql  
 >之后使用set global time_zone='+8:00';修改时区即可
+#### 3. mysql -u root -p;报错：mysql: [Warning] Using a password on the command line interface can be insecure.ERROR 1045 (28000): Access denied for user 'root'@'localhost' (using password: YES)   
+>使用mysql -u root -p不加分号结尾
