--- a/mysql/问题及解决.md
+++ b/mysql/问题及解决.md
@@ -1,7 +1,7 @@
 #### 1. net start mysql：发生系统错误 5。拒绝访问。
 >使用管理员身份运行cmd，之后再启动
 #### 2. 报错“The server time zone value 'ÖÐ¹ú±ê×¼Ê±¼ä' is unrecognized or represents more than one time zone.”  
->使用mysql -u root -p;输入密码登录mysql  
+>使用mysql -u root -p输入密码登录mysql  
 >之后使用set global time_zone='+8:00';修改时区即可
 #### 3. mysql -u root -p;报错：mysql: [Warning] Using a password on the command line interface can be insecure.ERROR 1045 (28000): Access denied for user 'root'@'localhost' (using password: YES)   
 >使用mysql -u root -p不加分号结尾
