--- a/Web/遇到的问题及解决方案.md
+++ b/Web/遇到的问题及解决方案.md
@@ -1,3 +1,3 @@
 ####1. 跨域问题
->前端：在config下的index.js加上
-!+[前端跨域]+(https://github.com/ym652324/bishe/blob/master/Web/img/Web_kuayu.png)
+>前端：在config下的index.js加上  
+![前端跨域](https://github.com/ym652324/bishe/blob/master/Web/img/Web_kuayu.png)
